2015-01-26  Jonathan Wakely  <jwakely@redhat.com>

	* testsuite/23_containers/set/operations/2.cc: Add test for
	non-transparent comparison function.

2015-01-25  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/29366
	* config/cpu/sh/atomicity.h (__exchange_and_add, __atomic_add): 
	Remove SH4A inline asm and lock based implementations and use the
	defaults from ext/atomicity.h.

2015-01-23  Jonathan Wakely  <jwakely@redhat.com>

	* config/abi/pre/gnu.ver: Tighten GLIBCXX_3.4 patterns to not match
	new std::string constructors for byname facets.

2015-01-22  Richard Biener  <rguenther@suse.de>

	PR libstdc++/64535
	* libsupc++/eh_alloc.cc: Include new.
	(bitmask_type): Remove.
	(one_buffer): Likewise.
	(emergency_buffer): Likewise.
	(emergency_used): Likewise.
	(dependents_buffer): Likewise.
	(dependents_used): Likewise.
	(class pool): New custom fixed-size arena, variable size object
	allocator.
	(emergency_pool): New global.
	(__cxxabiv1::__cxa_allocate_exception): Use new emergency_pool.
	(__cxxabiv1::__cxa_free_exception): Likewise.
	(__cxxabiv1::__cxa_allocate_dependent_exception): Likewise.
	(__cxxabiv1::__cxa_free_dependent_exception): Likewise.

2015-01-22  Tim Shen  <timshen@google.com>

	PR libstdc++/64680
	* include/bits/regex.h (basic_regex<>::basic_regex,
	basic_regex<>::operator=, basic_regex<>::imbue): Conform to the
	standard interface.
	* testsuite/28_regex/basic_regex/assign/char/cstring.cc: New testcase.

2015-01-22  Tim Shen  <timshen@google.com>

	PR libstdc++/64649
	* include/bits/regex.tcc (regex_traits<>::lookup_collatename,
	regex_traits<>::lookup_classname): Correctly narrow input chars.
	* testsuite/28_regex/traits/wchar_t/user_defined.cc: New testcase.

2015-01-21  Jonathan Wakely  <jwakely@redhat.com>

	* config/abi/pre/gnu.ver: Use [jmy] for size_t parameters.

2015-01-21  Jonathan Wakely  <jwakely@redhat.com>

	* testsuite/29_atomics/atomic/64658.cc: Test stored value.

2015-01-20  Jonathan Wakely  <jwakely@redhat.com>
